--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint": "npm run lint:js"
   },
+  // Nuxt及びその周辺環境の更新(Vue、npm、Sassなど)
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.15.1",
